--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# Compiled class file
+*.class
+
+# log file 
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile tools for Java
+.mtj.tmp/
+
+# Package files #
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# VM crash logs
+hs_err_pid*
+
 # Ignore SQL databases
 *.db
 /.metadata/
