--- a/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
+++ b/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
@@ -11,6 +11,10 @@
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.LandingPageServlet</servlet-class>
   </servlet>
   <servlet>
+  	<servlet-name>MainPageServlet</servlet-name>
+  	<servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.MainPageServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>IndexServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.IndexServlet</servlet-class>
   </servlet>
@@ -47,8 +51,8 @@
     <url-pattern>/landingPage</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>LandingPageServlet</servlet-name>
-    <url-pattern>/landingPage</url-pattern>
+  	<servlet-name>MainPageServlet</servlet-name>
+  	<url-pattern>/mainPage</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>AddNumbersServlet</servlet-name>
