Added login jsp, servlet, controller, and model; based off of addNumbers exa

--- a/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
+++ b/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
@@ -11,6 +11,10 @@
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.LandingPageServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>LogInServlet</servlet-name>
+    <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.LogInServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>IndexServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.IndexServlet</servlet-class>
   </servlet>
@@ -47,10 +51,6 @@
     <url-pattern>/landingPage</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>LandingPageServlet</servlet-name>
-    <url-pattern>/landingPage</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
     <servlet-name>AddNumbersServlet</servlet-name>
     <url-pattern>/addNumbers</url-pattern>
   </servlet-mapping>
@@ -61,6 +61,14 @@
   <servlet-mapping>
   	<servlet-name>MultiplyNumbersServlet</servlet-name>
   	<url-pattern>/multiplyNumbers</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>IndexServlet</servlet-name>
+  	<url-pattern>/index</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>LogInServlet</servlet-name>
+  	<url-pattern>/logIn</url-pattern>
   </servlet-mapping>
   
   <!--  AJAX servlet mappings. -->
