Users can now look at fractals on seperate page
Right now it only shows the name and it doesn't look pretty, but works
on a fundamental level. Users can add fractals to a list, and their
names are all displayed on the main page list. I'm not sure if the test
fractals will be in this commit, but there are a lot of test fractals
that need to be removed from the database, but for now they act as some
basic test data.

--- a/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
+++ b/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
@@ -42,6 +42,11 @@
   </servlet>
   
   <servlet>
+    <servlet-name>BrowseFractalsServlet</servlet-name>
+    <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.BrowseFractalsServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
     <servlet-name>GuessingGameServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.temp.GuessingGameServlet</servlet-class>
   </servlet>
@@ -81,6 +86,11 @@
   <servlet-mapping>
     <servlet-name>ViewAccountServlet</servlet-name>
     <url-pattern>/viewAccount</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>BrowseFractalsServlet</servlet-name>
+    <url-pattern>/browseFractals</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
