--- a/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
+++ b/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
@@ -37,6 +37,11 @@
   </servlet>
   
   <servlet>
+  	<servlet-name>VerifyAccountServlet</servlet-name>
+  	<servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.VerifyAccountServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
     <servlet-name>IndexServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.IndexServlet</servlet-class>
   </servlet>
@@ -87,7 +92,12 @@
     <servlet-name>ViewAccountServlet</servlet-name>
     <url-pattern>/viewAccount</url-pattern>
   </servlet-mapping>
-  
+
+	<servlet-mapping>
+		<servlet-name>VerifyAccountServlet</servlet-name>
+		<url-pattern>/verifyAccount</url-pattern>
+	</servlet-mapping>
+
   <servlet-mapping>
     <servlet-name>BrowseFractalsServlet</servlet-name>
     <url-pattern>/browseFractals</url-pattern>
