--- a/CS320_Team_Fractal_Website/.classpath
+++ b/CS320_Team_Fractal_Website/.classpath
@@ -31,5 +31,7 @@
 			<attribute name="javadoc_location" value="http://db.apache.org/derby/docs/10.10/publishedapi/jdbc4/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="javax.mail.jar"/>
+	<classpathentry kind="lib" path="E:/programming/320/320-Team/CS320-Team-Fractal-Website/jaf-1.1.1/activation.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
