--- a/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
+++ b/CS320_Team_Fractal_Website/war/WEB-INF/web.xml
@@ -42,6 +42,11 @@
   </servlet>
   
   <servlet>
+  	<servlet-name>ForgotPasswordServlet</servlet-name>
+  	<servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.ForgotPasswordServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
     <servlet-name>IndexServlet</servlet-name>
     <servlet-class>edu.ycp.cs320.CS320_Team_Fractal_Website.servlet.IndexServlet</servlet-class>
   </servlet>
@@ -96,6 +101,11 @@
 	<servlet-mapping>
 		<servlet-name>VerifyAccountServlet</servlet-name>
 		<url-pattern>/verifyAccount</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>ForgotPasswordServlet</servlet-name>
+		<url-pattern>/forgotPassword</url-pattern>
 	</servlet-mapping>
 
   <servlet-mapping>
