Replaced text box inputs for colors with sliders and added color display
The display is a preview for what each color will look like

--- a/CS320_Team_Fractal_Website/.classpath
+++ b/CS320_Team_Fractal_Website/.classpath
@@ -37,5 +37,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="javax.mail.jar"/>
 	<classpathentry kind="lib" path="/jaf-1.1.1/activation.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jaf-1.1.1"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
