--- a/CS320_Team_Fractal_Website/.classpath
+++ b/CS320_Team_Fractal_Website/.classpath
@@ -38,5 +38,6 @@
 	<classpathentry kind="lib" path="javax.mail.jar"/>
 	<classpathentry kind="lib" path="/jaf-1.1.1/activation.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jaf-1.1.1"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/scrypt-master"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
